[project]
name = "ComfyUI"
version = "0.8.2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.13.*"
dependencies = [
  "comfyui-frontend-package==1.35.9",
  "comfyui-workflow-templates==0.7.69",
  "comfyui-embedded-docs==0.3.1",
  "torch",
  "torchsde",
  "torchvision",
  "torchaudio",
  "numpy>=1.25.0",
  "einops",
  "transformers>=4.50.3",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.2",
  "aiohttp>=3.11.8",
  "yarl>=1.18.0",
  "pyyaml",
  "Pillow",
  "scipy",
  "tqdm",
  "psutil",
  "alembic",
  "SQLAlchemy",
  "av>=14.2.0",
  "comfy-kitchen>=0.2.5",
  #non essential dependencies:
  "kornia>=0.7.1",
  "spandrel",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  # requires building from source
  "sageattention",
  "flash-attn", # FA2
  # "flash-attn-interface", # FA3
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]

[[tool.uv.index]]
name = "pytorch-cu130-nightly"
url = "https://download.pytorch.org/whl/nightly/cu130"
# explicit = true # with this options it fails to resolve

[tool.uv.sources]
torch = [{ index = "pytorch-cu130-nightly"}]
torchvision = [{ index = "pytorch-cu130-nightly"}]
sageattention = [{ git = "https://github.com/thu-ml/SageAttention.git"}]
flash-attn = [{ git = "https://github.com/Dao-AILab/flash-attention.git"}]
flash-attn-interface = [{ git = "https://github.com/Dao-AILab/flash-attention.git"}]

[tool.uv]
prerelease = "allow"
no-build-isolation = true
required-environments = ["sys_platform == 'linux'"]
index-strategy = "unsafe-best-match"
